--- a/index.html
+++ b/index.html
@@ -9,12 +9,13 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>People Entered</h1>
+    <h1>People Entered:</h1>
     <h2 id="count-el">0</h2>
     <!-- CREATE AN INCREMENT BUITON WITH THE ID="INCREMENTBTN"-->
-
     <button  id="increment-btn" onclick="increment()">INCREMENT</button>
     <button id="save-btn" onclick="save()">SAVE</button>
+
+    <p id="save-el" >Previous entries: </p>
 
     
 
